<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_below="@id/photoNameAndCompanyLayout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/phone_label"
            android:gravity="center"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <EditText
                android:enabled="false"
                android:background="@null"
                android:id="@+id/workPhone"
                android:layout_width="0dp"
                android:inputType="phone"
                android:textColor="#000000"
                android:gravity="center_vertical"
                android:layout_height="30dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_weight="4"/>
        <TextView
                android:layout_width="0dp"
                android:text="@string/work_phone"
                android:gravity="center"
                android:textColor="#000000"
                android:layout_height="30dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <EditText
                android:enabled="false"
                android:background="@null"
                android:id="@+id/homePhone"
                android:layout_width="0dp"
                android:inputType="phone"
                android:textColor="#000000"
                android:gravity="center_vertical"
                android:layout_height="30dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_weight="4"/>
        <TextView
                android:layout_width="0dp"
                android:text="@string/home_phone"
                android:gravity="center"
                android:textColor="#000000"
                android:layout_height="30dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <EditText
                android:enabled="false"
                android:background="@null"
                android:id="@+id/mobilePhone"
                android:inputType="phone"
                android:layout_width="0dp"
                android:gravity="center_vertical"
                android:layout_height="30dp"
                android:textColor="#000000"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_weight="4"/>
        <TextView
                android:layout_width="0dp"
                android:text="@string/mobile_phone"
                android:gravity="center"
                android:layout_height="30dp"
                android:textColor="#000000"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_weight="1"/>
    </LinearLayout>


</LinearLayout>