<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        tools:showIn="@layout/fragment_contact_detail">

    <ImageView
            android:id="@+id/image"
            android:layout_width="0dp"
            android:gravity="center_vertical"
            android:layout_height="match_parent"
            android:src="@mipmap/ic_profile"
            android:contentDescription="@string/profile_picture_description"
            android:layout_weight="2"/>

    <RelativeLayout
            android:id="@+id/nameAndCompanyLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:orientation="vertical"
            android:layout_weight="3">
        <TextView
                android:id="@+id/nameLabel"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:gravity="center_vertical"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/name_label"/>
        <EditText
                android:id="@+id/name"
                android:layout_below="@id/nameLabel"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:inputType="text"
                android:gravity="center_vertical"
                android:enabled="false"
                android:background="@null"
                android:textColor="#000000"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        <TextView
                android:id="@+id/companyLabel"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:gravity="center_vertical"
                android:layout_below="@id/name"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/company_label"/>
        <EditText
                android:enabled="false"
                android:id="@+id/company"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_below="@id/companyLabel"
                android:layout_height="50dp"
                android:textColor="#000000"
                android:inputType="text|textMultiLine"
                android:maxLines="4"
                android:background="@null"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

    </RelativeLayout>

</LinearLayout>